@@ -1,7 +1,7 @@
 # Run "autoconf" to generate "configure" from this file.
 
 AC_PREREQ(2.56)
-AC_INIT(asap, 1.0.0, fox@scene.pl)
+AC_INIT(asap, 1.0.1, fox@scene.pl)
 AC_CONFIG_SRCDIR(asap.c)
 
 if [[ "X_$CFLAGS" = "X_" ]]; then
@@ -29,6 +29,15 @@ fi
 AC_SUBST(XMMS_CFLAGS)
 AC_SUBST(XMMS_LIBS)
 AC_SUBST(XMMS_INPUT_PLUGIN_DIR)
+
+if [[ "X_$MOC_INCLUDE" = "X_" ]]; then
+    MOC_INCLUDE="../moc-2.5.0-alpha1"
+fi
+if [[ "X_$MOC_PLUGIN_DIR" = "X_" ]]; then
+    MOC_PLUGIN_DIR="/usr/local/lib/moc/decoder_plugins"
+fi
+AC_SUBST(MOC_INCLUDE)
+AC_SUBST(MOC_PLUGIN_DIR)
 
 AC_CONFIG_FILES(Makefile)
 AC_OUTPUT
